--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -9,7 +9,7 @@
 
 {% block dashboard_section %}
 <form id="dashboardForm" action="{{ url_for('admin_manageTimetable') }}" method="POST">
-    <div id="dashboardSection" style="width: 90%; margin:auto; padding:1%">
+    <div id="dashboardSection">
         <input type="hidden" name="form_type" value="dashboard">    
         <div class="form-left" style="width: 100%">
             <div class="dashboard-row" style="grid-template-columns: 1fr 1fr;">
