--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -10,7 +10,7 @@
 {% block dashboard_section %}
 <!-- Dashboard Form -->
 <form id="dashboardForm" action="{{ url_for('admin_manageCourse') }}" method="POST">
-    <div id="dashboardSection" style="width: 90%; margin:auto; padding:1%">
+    <div id="dashboardSection">
         <input type="hidden" name="form_type" value="dashboard">
         <div class="form-left" style="width: 100%">
 
