--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -34,9 +34,9 @@
                     {% for exam in exams %}
                         <div class="exam-card"
                             style="background-color: {% if exam.is_overnight %}#dc74f7{% elif exam.status %}#75bdf9{% else %}lightgrey{% endif %};">
-                            <strong>{{ exam.course_code }}</strong> - {{ exam.course_name }}<br>
-                            Venue: {{ exam.venue }}<br>
-                            Time: {{ exam.start_time.strftime("%H:%M") }} - {{ exam.end_time.strftime("%H:%M") }}
+                            <strong>{{ exam.course_code }}</strong> - <i>{{ exam.course_name }}</i><br>
+                            <strong>Venue</strong>: {{ exam.venue }}<br>
+                            <strong>Time</strong>: {{ exam.start_time.strftime("%H:%M") }} - {{ exam.end_time.strftime("%H:%M") }}
                             {% if exam.is_overnight %}
                                 <span style="font-size: 12px; color: #700;">(Overnight)</span>
                             {% endif %}
