--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -2,7 +2,7 @@
 {% set body_class = 'user-homepage' %}
 {% block title %}Homepage{% endblock %}
 {% block content %}
-<h1>Welcome Back - {{ user_name }}</h1>
+<h1>Welcome Back - <i>{{ user_name }}</i></h1>
 
 {% if user_level in [2, 3, 4] %}
 <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;">
