--- a/app/templates/user/userMergeTimetable.html
+++ b/app/templates/user/userMergeTimetable.html
@@ -1,7 +1,7 @@
 {% extends "user/userBase.html" %}
 {% block title %}Timetable{% endblock %}
 {% block head_title %}
-<h2>{{ user_department }} - Merge Timetable</h2>
+<h2><i>{{ user_department }}</i> - Merge Timetable</h2>
 {% endblock %}
 
 {% block content %}
