--- a/app/templates/user/userOwnTimetable.html
+++ b/app/templates/user/userOwnTimetable.html
@@ -1,7 +1,7 @@
 {% extends "user/userBase.html" %}
 {% block title %}Timetable{% endblock %}
 {% block head_title %}
-<h2>Staff Timetable - {{ user_name }}</h2>
+<h2>Staff Timetable - <i>{{ user_name }}</i>/h2>
 {% endblock %}
 {% block content %}
 <div class="menu-section">
@@ -9,7 +9,7 @@
         <!-- Time axis (x-axis header) -->
         <div class="time-header">
             {% for time in ["07:00","08:00","09:00","10:00","11:00","12:00","13:00","14:00","15:00","16:00","17:00","18:00","19:00","20:00","21:00","22:00","23:00"] %}
-                <div>{{ time }}</div>
+                <div>{{ time }} | </div>
             {% endfor %}
         </div>
 
@@ -29,7 +29,8 @@
                         {% set col_start = start_hour - 7 + 1 %} {# 07:00 is column 1 #}
                             <div class="class-block" style="grid-column: {{ col_start }} / span {{ span }};">
                                 <strong>{{ row.courseName }}</strong><br>
-                                <i>{{ row.classType }} | {{ row.classRoom }}</i><br>
+                                <i>[{{ row.classType }}]</i><br>
+                                <i>{{ row.classRoom }}</i><br>
                                 {% for intake, code, section in row.combined %}
                                 <small>{{ intake }} | {{ code }} | {{ section }}</small><br>
                                 {% endfor %}
