--- a/app/templates/user/userOwnTimetable.html
+++ b/app/templates/user/userOwnTimetable.html
@@ -1,7 +1,7 @@
 {% extends "user/userBase.html" %}
 {% block title %}Timetable{% endblock %}
 {% block head_title %}
-<h2>Staff Timetable - <i>{{ user_name }}</i>/h2>
+<h2>Staff Timetable - <i>{{ user_name }}</i></h2>
 {% endblock %}
 {% block content %}
 <div class="menu-section">
