--- a/app/templates/user/userOwnTimetable.html
+++ b/app/templates/user/userOwnTimetable.html
@@ -8,8 +8,8 @@
     <div class="user-table-container" style="max-height: none; margin: 0;">
         <!-- Time axis (x-axis header) -->
         <div class="time-header">
-            {% for time in ["07:00","08:00","09:00","10:00","11:00","12:00","13:00","14:00","15:00","16:00","17:00","18:00","19:00","20:00","21:00","22:00","23:00"] %}
-                <div>{{ time }} | </div>
+            {% for hour in range(7, 24) %}
+                <div>{{ "%02d00"|format(hour) }}</div>
             {% endfor %}
         </div>
 
