--- a/app/templates/user/userOwnTimetable.html
+++ b/app/templates/user/userOwnTimetable.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 <div class="menu-section">
-    <div class="user-table-container" style="max-height: none; margin: 0;">
+    <div>
         <!-- Time axis (x-axis header) -->
         <div class="time-header">
             {% for hour in range(7, 24) %}
