--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -78,9 +78,9 @@
                             <!-- Check-in/out Time -->
                             <td>
                                 <div class="info-grid">
-                                    <div>Check-in Time</div><div><strong>: {{ att.checkIn }}</strong></div>
+                                    <div>Check-in Time</div><div><strong>: {{ att.checkIn }}</strong></div> 
                                     <div>Check-out Time</div><div><strong>: {{ att.checkOut }}</strong></div>
-                                    <div style="color: #00b300">Total Invigilation Hour</div><div><strong>: {{ att.checkIn }}</strong></div>
+                                    <div style="color: #00b300"><strong>Total Invigilation Hour</div><div>: {{ att.checkIn }}</strong></div>
                                 </div>
                             </td>
 
