--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -104,7 +104,7 @@
                         <td>
                             <input type="hidden" name="w_id" value="{{ w.attendanceId }}">
                             <button type="submit" name="action" value="accept" onclick="return confirm('Are you sure to accept this slot?')" style="background-color: #d4edda; color: #155724; padding: 5%;">Accept</button>
-                            <button type="submit" name="action" value="reject" onclick="return confirm('Are you sure to delete this slot?')" style="background-color: #f8d7da; color: #721c24; padding: 5%;">Reject</button>
+                            <button type="submit" name="action" value="reject" onclick="return confirm('Are you sure to reject this slot?')" style="background-color: #f8d7da; color: #721c24; padding: 5%;">Reject</button>
                         </td>
                     </tr>
                     {% endfor %}
@@ -175,7 +175,7 @@
                         <td>{{ a.report.exam.course.courseCodeSectionIntake }}</td>
                         <td>
                             <input type="hidden" name="a_id" value="{{ a.attendanceId }}">
-                            <button type="submit" name="action" value="open_accept" onclick="return confirm('Are you sure to choose this slot?')" style="background-color: #d4edda; color: #155724; padding: 5%;">
+                            <button type="submit" name="action" value="open_accept" onclick="return confirm('Are you sure to additional choose this slot?')" style="background-color: #d4edda; color: #155724; padding: 5%;">
                                 Accept
                             </button>
                         </td>
