--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -249,7 +249,7 @@ html, body {
 
 .user-data-table td {
     padding: 10px 20px;
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: 1px solid #000;
     color: #333;
     font-size: 0.95em;
     line-height: 1.1;
@@ -399,12 +399,12 @@ max-height: 1000px;
     display: grid;
     grid-template-columns: repeat(17, 1fr);
     margin-left: 60px;
-    font-size: 0.8em;
+    font-size: 1.0em;
     text-align: center;
     margin-bottom: 5px;
     width: calc(100% - 60px);
     border-left: 1px solid #aaa; /* leftmost border */
-    border-bottom: 1px solid #aaa; /* leftmost border */
+    border-bottom: 1px solid #000; /* leftmost border */
 }
 
 .time-header div {
@@ -421,7 +421,7 @@ max-height: 1000px;
 .timetable-row {
     display: flex;
     align-items: flex-start;
-    border-bottom: 1px solid darkgreen;
+    border-bottom: 1px solid #000;
 }
 
 .day-label {
