--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -102,7 +102,7 @@
                             {% endif %}
 
                             <!-- Invigilator Details -->
-                            <td>
+                            <td style="border-left: 1px solid #aaa;">
                                 {% if att %}
                                     <div class="info-grid">
                                         <div>ID</div><div><strong>: {{ att.invigilator.userId }}</strong></div>
