--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -66,7 +66,7 @@
                             {% endif %}
 
                             <!-- Invigilator Details (one per row) -->
-                            <td>
+                            <td style="border-left: 1px solid #aaa;">
                                 <div class="info-grid">
                                     <div>ID</div><div><strong>: {{ att.invigilator.userId }}</strong></div>
                                     <div>Name</div><div><strong>: {{ att.invigilator.userName }}</strong></div>
